# PD

./: BStarTree.cpp  BStarTree.h  FSA.cpp  FSA.h  FloorPlanning.cpp  FloorPlanning.h  gmon.out  hash.h  hw2  main.cpp  makefile
b03901152_p2/: BStarTree.cpp  BStarTree.h  FSA.cpp  FloorPlanning.cpp  FloorPlanning.h  PA2 report.doc  README  hash.h  main.cpp  makefile  report.doc  visualize
b03901152_p2/input_pa2/: input.block  input.nets
hw1/: .~lock.report_PD_hw1_b03901152.odt#  Cell.h  Net.h  cirMgr.cpp  cirMgr.h  gropf.txt  main.cpp  makefile  readme
hw1/checker/: myresult0  myresult1
hw2/: BStarTree.cpp  BStarTree.h  FSA  FSA.cpp  FSA.h  FloorPlanning.cpp  FloorPlanning.h  README  gmon.out  gp.sh  hash.h  hw2  hw2.gprof  main.cpp  makefile  run.sh  visualize
hw3_ver3/legalization/src/: CMakeCache.txt  CMakeLists.txt  FSA.gprof  Makefile  Run1.sh  Run5.sh  cmake_install.cmake  execute.sh  gmon.out  gp.sh  ibm01-cu85.lg.pl  ibm01-cu85.lg.plt  ibm02-cu90.lg.pl  ibm07-cu90.lg.pl  ibm08-cu90.lg.pl  ibm09-cu90.lg.pl  legalizer  run.sh  test1  (+1 more)
hw4/: CMakeCache.txt  CMakeLists.txt  Check.sh  Makefile  Router  Router.gprof  checker  cmake_install.cmake  gmon.out  gp.sh  run.sh
hw4/output/: output1  output2  output3  output4  output5  output6  output7  output8
hw4/src/: Check.sh  FloorPlan.cpp  FloorPlan.h  README  SpanningTree.cpp  SpanningTree.h  SteinerTree.cpp  SteinerTree.h  SteinerTreeRect.cpp  checker.txt  main.cpp  passport
hw4/src/GnuplotLivePlotter/: GnuplotLivePlotter.cpp  GnuplotLivePlotter.h
hw4/src/Graph/: Graph.h
hw4/testbench/: case1  case50000
(+17 files in other folders)
